css: Fix overflowing long URLs in Markdown macros.
Long URLs in Markdown macros overflow their containers without this
property. This reverts 0dc91a9148f03fbd65397d0cd1ef428b407841ae.  We
will likely need to fix the original Windows bug that
0dc91a9148f03fbd65397d0cd1ef428b407841ae has resolved another way.

--- a/static/styles/landing-page.css
+++ b/static/styles/landing-page.css
@@ -2002,6 +2002,7 @@ nav ul li.active::after {
     display: inline-block;
     vertical-align: middle;
     max-width: 100%;
+    overflow: auto;
 
     font-family: Monaco, Menlo, Consolas, "Courier New", Courier, monospace;
     font-size: 0.85em;
